--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dist/styles/app.css">
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png">
 
     <title>特派𝕏锁铃: 自定义你的特斯拉锁车提示音|免费下载特斯拉锁车音效</title>
     <meta name="description" content="特派整理的特斯拉锁车音效大全，完全免费下载，自定义你的特斯拉锁车提示音，特斯拉锁车声音，特斯拉锁车铃声">
@@ -101,11 +102,8 @@
             </div>
 
             <div class="intro">
-
-                <h2>自定义你的特斯拉锁车提示音</h2>
+                <h2>下载锁车音效 认准特派锁铃</h2>
                 <h3>最热 最新 最全的特斯拉锁车音效 免费下载</h3>
-
-
             </div>
         </div>
     </section>
