--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
             </div>
 
             <div class="tags">
+                <span class="china-red">春节</span>
                 <span>热梗</span>
                 <span>显眼包</span>
                 <span>马里奥</span>
@@ -165,6 +166,7 @@
                 <span>人声</span>
                 <span>粗口</span>
                 <span>机器人</span>
+                <span>CyberPunk</span>
             </div>
         </div>
     </section>
@@ -235,7 +237,7 @@
         </div>
     </main>
 
-    <footer>
+    <footer id="footer">
         <div class="container">
             <p>特派 𝕏 锁铃</p>
             <p><small>所有特斯拉锁车音效的版权归原创者所有，特派只负责特斯拉锁车提示音的收集整理、剪辑、压缩和分享，以及网站的建设和维护。</small></p>
