--- a/index.html
+++ b/index.html
@@ -112,12 +112,13 @@
     <section class="filter">
         <div class="container">
             <div class="toolbar">
-                <form class="search-form">
-                    <button type="button" class="icon-button search-button"><i></i></button>
-                    <input type="search" value="" placeholder="搜索音效" />
-                    <button type="button" class="icon-button clear-button" title="清除"><i></i></button>
-                </form>
-
+                <div class="search">
+                    <form class="search-form">
+                        <button type="button" class="icon-button search-button"><i></i></button>
+                        <div class="input-container"><input type="search" value="" placeholder="搜索音效" /></div>
+                        <button type="button" class="icon-button clear-button" title="清除"><i></i></button>
+                    </form>
+                </div>
 
                 <div class="actions">
                     <button type="button" class="icon-button tags-toggle" title="标签"><i></i></button>
