--- a/index.html
+++ b/index.html
@@ -136,11 +136,15 @@
                 <span class="china-red">春节</span>
                 <span>热梗</span>
                 <span>显眼包</span>
+                <span>游戏</span>
                 <span>马里奥</span>
+                <span>塞尔达</span>
+                <span>动漫</span>
                 <span>蜡笔小新</span>
                 <span>哆啦A梦</span>
                 <span>南方公园</span>
                 <span>瑞克和莫蒂</span>
+                <span>名人</span>
                 <span>周星驰</span>
                 <span>周杰伦</span>
                 <span>卢本伟</span>
@@ -153,8 +157,6 @@
                 <span>贾维斯</span>
                 <span>变形金刚</span>
                 <span>星球大战</span>
-                <span>游戏</span>
-                <span>动漫</span>
                 <span>复古</span>
                 <span>足球</span>
                 <span>广告</span>
