--- a/index.html
+++ b/index.html
@@ -139,30 +139,33 @@
                 <span>游戏</span>
                 <span>马里奥</span>
                 <span>塞尔达</span>
+                <span>王者荣耀</span>
+                <span>英雄联盟</span>
+                <span>红警</span>
                 <span>动漫</span>
                 <span>蜡笔小新</span>
                 <span>哆啦A梦</span>
                 <span>南方公园</span>
                 <span>瑞克和莫蒂</span>
+                <span>电视剧</span>
+                <span>电影</span>
+                <span>贾维斯</span>
+                <span>变形金刚</span>
+                <span>星球大战</span>
                 <span>名人</span>
                 <span>周星驰</span>
                 <span>周杰伦</span>
                 <span>卢本伟</span>
                 <span>沈腾</span>
                 <span>岳云鹏</span>
+                <span>说唱</span>
                 <span>Bye Bye</span>
                 <span>汽车</span>
-                <span>电视剧</span>
-                <span>电影</span>
-                <span>贾维斯</span>
-                <span>变形金刚</span>
-                <span>星球大战</span>
                 <span>复古</span>
                 <span>足球</span>
                 <span>广告</span>
                 <span>英语</span>
                 <span>正经音效</span>
-                <span>名人</span>
                 <span>手机</span>
                 <span>特剪</span>
                 <span>氛围</span>
