--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
                 <span>动漫</span>
                 <span>蜡笔小新</span>
                 <span>哆啦A梦</span>
+                <span>小黄人</span>
+                <span>海绵宝宝</span>
                 <span>南方公园</span>
                 <span>瑞克和莫蒂</span>
                 <span>电视剧</span>
