--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
                 <span>蜡笔小新</span>
                 <span>哆啦A梦</span>
                 <span>小黄人</span>
+                <span>皮卡丘</span>
                 <span>海绵宝宝</span>
                 <span>南方公园</span>
                 <span>瑞克和莫蒂</span>
@@ -154,7 +155,9 @@
                 <span>贾维斯</span>
                 <span>变形金刚</span>
                 <span>星球大战</span>
+                <span>毒液</span>
                 <span>名人</span>
+                <span>马斯克</span>
                 <span>周星驰</span>
                 <span>周杰伦</span>
                 <span>卢本伟</span>
@@ -169,12 +172,11 @@
                 <span>英语</span>
                 <span>正经音效</span>
                 <span>手机</span>
-                <span>特剪</span>
-                <span>氛围</span>
                 <span>人声</span>
                 <span>粗口</span>
                 <span>机器人</span>
                 <span>CyberPunk</span>
+                <span>动物</span>
             </div>
         </div>
     </section>
