--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="dist/styles/app.css">
     <link rel="shortcut icon" type="image/png" href="/images/favicon.png">
 
-    <title>特派𝕏锁铃: 自定义你的特斯拉锁车提示音|免费下载特斯拉锁车音效</title>
+    <title>特派𝕏锁铃: 特斯拉锁车音效库</title>
     <meta name="description" content="特派整理的特斯拉锁车音效大全，完全免费下载，自定义你的特斯拉锁车提示音，特斯拉锁车声音，特斯拉锁车铃声">
     <meta name="keywords" content="特斯拉锁车音效,特斯拉锁车提示音,特斯拉锁车声音,特斯拉锁车铃声">
 </head>
@@ -103,7 +103,7 @@
 
             <div class="intro">
                 <h2>下载锁车音效 认准特派锁铃</h2>
-                <h3>最热 最新 最全的特斯拉锁车音效 免费下载</h3>
+                <h3>最热 最新 最全的特斯拉锁车音效库 免费下载</h3>
                 <p><small></small></p>
             </div>
         </div>
@@ -286,7 +286,7 @@
                             <p><small>本站分享的所有音频文件都符合特斯拉锁车提示音的要求，如果您从其它地方下载或自己剪辑制作音频文件，请注意以下事项：</small></p>
 
                             <p>*️⃣ 音频文件不能大于1MB<br />
-                                *️⃣ 文件直接到后缀<code>.wav</code>改成<code>.mp3</code>即可，不需要实际的音频格转换
+                                *️⃣ MP3文件直接把后缀<code>.mp3</code>改成<code>.wav</code>即可，不需要实际的音频格转换
                             </p>
 
                         </div>
