--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <template id="sound-item">
                 <div class="sound-item">
                     <div class="cover">
-                        <img src="" alt="" />
+                        <img src="" alt="" loading="lazy" />
                         <i class="play"></i>
                         <i class="pause"></i>
                         <svg version="1.1" class="circle" xmlns="http://www.w3.org/2000/svg"
