--- a/index.html
+++ b/index.html
@@ -166,7 +166,6 @@
                 <span>说唱</span>
                 <span>Bye Bye</span>
                 <span>汽车</span>
-                <span>复古</span>
                 <span>足球</span>
                 <span>广告</span>
                 <span>英语</span>
@@ -178,6 +177,8 @@
                 <span>CyberPunk</span>
                 <span>动物</span>
                 <span>特斯拉</span>
+                <span>复古</span>
+                <span>怀旧</span>
             </div>
         </div>
     </section>
