--- a/index.html
+++ b/index.html
@@ -167,7 +167,6 @@
                 <span>Bye Bye</span>
                 <span>汽车</span>
                 <span>足球</span>
-                <span>广告</span>
                 <span>英语</span>
                 <span>正经音效</span>
                 <span>手机</span>
@@ -179,6 +178,7 @@
                 <span>特斯拉</span>
                 <span>复古</span>
                 <span>怀旧</span>
+                <span>洗脑广告</span>
             </div>
         </div>
     </section>
