--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                 <h2>下载锁车音效 认准特派锁铃</h2>
                 <h3>最热 最新 最全的特斯拉锁车音效库 免费下载</h3>
                 <p><small></small></p>
+                <blockquote><small>网站速度慢的车友可以加 <mark>QQ群：826566918</mark> 拿百度网盘下载链接</small></blockquote>
             </div>
         </div>
     </section>
